crates/cuda-macros/tests/compile_fail/index_1d_u32_marker_spoof_requires_unsafe.stderr
error[E0308]: mismatched types
 --> tests/compile_fail/index_1d_u32_marker_spoof_requires_unsafe.rs:9:34
  |
9 |     let _ = thread::index_1d_u32(launch_context);
  |             -------------------- ^^^^^^^^^^^^^^ expected `&LaunchContext<'_, Domain1, ...>`, found `&LaunchContext<'_>`
  |             |
  |             arguments to this function are incorrect
  |
  = note: expected reference `&cuda_device::LaunchContext<'_, cuda_device::__internal::Domain1, cuda_device::__internal::U32Coordinates>`
             found reference `&cuda_device::LaunchContext<'_, cuda_device::__internal::UnknownDomain, cuda_device::__internal::NativeCoordinates>`
note: function defined here
 --> $WORKSPACE/crates/cuda-device/src/thread.rs
  |
  | pub fn index_1d_u32<'kernel>(
  |        ^^^^^^^^^^^^
